--- a/thesis.tex
+++ b/thesis.tex
@@ -14,15 +14,15 @@
 \documentclass[twoside,openright,titlepage,fleqn,
 ,	headinclude,12pt,a4paper,BCOR5mm,footinclude,table]{scrbook}
 %--------------------------------------------------------------
-\newcommand{\myItalianTitle}{Titolo In Italiano\xspace}
-\newcommand{\myEnglishTitle}{Title In English\xspace}
+\newcommand{\myItalianTitle}{Utilizzo di un algoritmo Sensor Fusion nell'ambito della localizzazione ferrotramviaria\xspace}
+\newcommand{\myEnglishTitle}{Use of a Sensor Fusion Algorithm in the area of tramway localization\xspace}
 % use the right myDegree option
 \newcommand{\myDegree}{Corso di Laurea in Informatica\xspace}
 %\newcommand{\myDegree}{
 	%Corso di Laurea Specialistica in Scienze e Tecnologie 
 	%dell'Informazione\xspace}
-\newcommand{\myName}{Il Tuo Nome\xspace}
-\newcommand{\myProf}{Nome del Relatore\xspace}
+\newcommand{\myName}{Alex Foglia\xspace}
+\newcommand{\myProf}{Andrea Bondavalli\xspace}
 \newcommand{\myOtherProf}{Nome Cognome\xspace}
 \newcommand{\mySupervisor}{Nome Cognome\xspace}
 \newcommand{\myFaculty}{
@@ -30,12 +30,12 @@
 \newcommand{\myUni}{\protect{
 	Universit\`a degli Studi di Firenze}\xspace}
 \newcommand{\myLocation}{Firenze\xspace}
-\newcommand{\myTime}{Anno Accademico 2016-2017\xspace}
+\newcommand{\myTime}{Anno Accademico 2018-2019\xspace}
 \newcommand{\myVersion}{Version 0.1\xspace}
 %--------------------------------------------------------------
 
 \usepackage[italian]{babel}
-\usepackage[latin1]{inputenc} 
+\usepackage[latin1]{inputenc}
 \usepackage[T1]{fontenc} 
 \usepackage[square,numbers]{natbib} 
 \usepackage[fleqn]{amsmath}  
