--- a/thesis.tex
+++ b/thesis.tex
@@ -17,7 +17,7 @@
 \newcommand{\myItalianTitle}{Utilizzo di un algoritmo Sensor Fusion nell'ambito della localizzazione ferrotramviaria\xspace}
 \newcommand{\myEnglishTitle}{Use of a Sensor Fusion Algorithm in the area of tramway localization\xspace}
 % use the right myDegree option
-\newcommand{\myDegree}{Corso di Laurea in Informatica\xspace}
+\newcommand{\myDegree}{Corso di Laurea Magistrale in Informatica\xspace}
 %\newcommand{\myDegree}{
 	%Corso di Laurea Specialistica in Scienze e Tecnologie 
 	%dell'Informazione\xspace}
