--- a/thesis.tex
+++ b/thesis.tex
@@ -18,6 +18,7 @@
 \newcommand{\myEnglishTitle}{Use of a Sensor Fusion Algorithm in the area of tramway localization\xspace}
 % use the right myDegree option
 \newcommand{\myDegree}{Corso di Laurea Magistrale in Informatica\xspace}
+\newcommand{\myCurriculum}{Resilient and Secure Cyber-Physical System\xspace}
 %\newcommand{\myDegree}{
 	%Corso di Laurea Specialistica in Scienze e Tecnologie 
 	%dell'Informazione\xspace}
