--- a/titlePage.tex
+++ b/titlePage.tex
@@ -11,6 +11,7 @@
 %			\spacedallcaps{\myUni} \\ 
 			\myFaculty \\
 			\myDegree \\ 
+			\myCurriculum \\
 			\vspace{0.5cm}
          \vspace{0.5cm}    
            
