--- a/thesis.tex
+++ b/thesis.tex
@@ -147,7 +147,7 @@ parts]{classicthesis}
 \listoffigures
 \include{Chapters/Chapter1}
 \include{Chapters/Chapter2}
-
+\include{Chapters/Chapter3}
 
 
 
