--- a/thesis.tex
+++ b/thesis.tex
@@ -142,13 +142,16 @@ parts]{classicthesis}
 %\cleardoublepage\myPart{Part II}
 %\include{chapter02}
 %\include{chapter03}
+\include{Abstract}
 \tableofcontents
 \listoftables
 \listoffigures
 \include{Chapters/Chapter1}
 \include{Chapters/Chapter2}
 \include{Chapters/Chapter3}
-
+\include{Chapters/Chapter4}
+\include{Chapters/Chapter5}
+\include{Chapters/Bibliography}
 
 
 
