--- a/thesis.tex
+++ b/thesis.tex
@@ -82,7 +82,6 @@ parts]{classicthesis}
 
 
 
-
 %%
 %% Julia definition (c) 2014 Jubobs
 %%
@@ -90,7 +89,7 @@ parts]{classicthesis}
   {morekeywords={abstract,break,case,catch,const,continue,do,else,elseif,%
       end,export,false,for,function,immutable,import,importall,if,in,%
       macro,module,otherwise,quote,return,switch,true,try,type,typealias,%
-      using,while},%
+      using,while,endfor},%
    sensitive=true,%
    alsoother={},%
    morecomment=[l]\#,%
