--- a/thesis.tex
+++ b/thesis.tex
@@ -14,8 +14,8 @@
 \documentclass[twoside,openright,titlepage,fleqn,
 ,	headinclude,12pt,a4paper,BCOR5mm,footinclude,table]{scrbook}
 %--------------------------------------------------------------
-\newcommand{\myItalianTitle}{Utilizzo di un algoritmo Sensor Fusion nell'ambito della localizzazione ferrotramviaria\xspace}
-\newcommand{\myEnglishTitle}{Use of a Sensor Fusion Algorithm in the area of tramway localization\xspace}
+\newcommand{\myItalianTitle}{Analisi di un sottosistema di posizionamento ferrotramviario\xspace}
+\newcommand{\myEnglishTitle}{Analysis of a tramway positioning subsystem\xspace}
 % use the right myDegree option
 \newcommand{\myDegree}{Corso di Laurea Magistrale in Informatica\xspace}
 \newcommand{\myCurriculum}{Resilient and Secure Cyber-Physical System\xspace}
