aspettare cosa dice il bonda

--- a/thesis.tex
+++ b/thesis.tex
@@ -150,6 +150,7 @@ parts]{classicthesis}
 \include{Chapters/Chapter3}
 \include{Chapters/Chapter4}
 \include{Chapters/Chapter5}
+\include{Chapters/Chapter6}
 \include{Chapters/Bibliography}
 
 
