finire 5 e aggiustare 1 con inquadramento problema + aggiustare 2 con definizione chiara delle uscite di SFA

--- a/thesis.tex
+++ b/thesis.tex
@@ -47,7 +47,7 @@
 \usepackage{appendix}
 \usepackage{siunitx}
 \usepackage{url}
-
+\usepackage{placeins}
 %--------------------------------------------------------------
 \usepackage{dia-classicthesis-ldpkg}
 %--------------------------------------------------------------
