--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,6 +1,8 @@
 \paragraph{Abstract}\mbox{}\\*
-I sistemi di posizionamento ferroviari e ferrotramviari ad oggi impiegati, fanno un largo uso di apparati installati a terra e segnali provenienti dalla linea. La loro realizzazione ha pertanto un costo e un impatto ambientale non trascurabili. Per questo motivo, \`e necessario pianificare una migrazione verso di sistemi di posizionamento autonomi, i quali non debbono utilizzare alcun apparato installato a terra, in linea con le normative operazionali europee in ambito ferroviario e ferrotramviario.\\*
-In questa Tesi si mostrano i risultati relativi a un' attivit\`a di \emph{fault injection} condotta su di un sotto sistema di posizionamento ferrotramviario autonomo, basato sull'utilizzo di un algoritmo noto come \emph{Sensor Fusion Algorithm}.\\*
-SFA \`e un algoritmo che permette di integrare le misure fornite da un insieme di sensori installati a bordo treno, al fine di attutire il rumore di misura e ottenere una stima della posizione del treno pi\`u affidabile di quella che si otterrebbe considerando i singoli sensori.\\*
-Si inquadra il sistema nel contesto dei \emph{Cyber Physical Systems of Systems} (CPSoS) e dei sistemi \emph{safety-critical}. Segue una descrizione del sistema e dell'ambiente in cui questo verr\`a analizzato; infine si mostrano e discutono i risultati sperimentali osservati durante la campagna di \emph{fault injection}.
-
+I sistemi di posizionamento ferroviari e ferrotramviari ad oggi impiegati, fanno un largo uso di apparati installati a terra e segnali provenienti dalla linea. La loro realizzazione ha pertanto un costo e un impatto ambientale non trascurabili. Per questo motivo, \`e necessario pianificare una migrazione verso di sistemi di posizionamento autonomi, in accordo alle normative operazionali europee in ambito ferroviario e ferrotramviario definite dallo standard \texttt{ERTMS/ETCS}.\\*
+Un sistema di posizionamento ferroviario, o ferrotramviario, \`e autonomo quando non fa alcun uso di apparati installati a terra.\\*
+In questa Tesi si mostrano, e discutono, i risultati sperimentali ottenuti attraverso un' attivit\`a di \emph{fault injection} condotta su un sottosistema di posizionamento ferrotramviario autonomo.\\*
+Il sistema \emph{target} dell'analisi basa il suo funzionamento sull'utilizzo di un insieme di sensori installati a bordo treno, le cui misure campionate vengono processate da un algoritmo noto come \emph{Sensor Fusion Algorithm} (SFA).\\*
+SFA \`e un algoritmo che integra le misure fornite da un insieme di sensori al fine di attutirne il rumore di misura. L'output prodotto da SFA \`e una misura pi\`u sicura e affidabile di quella che si otterrebbe considerando i sensori singolarmente. In questo contesto, la misura che si intende fornire attraverso l'uso di SFA \`e la posizione del treno.\\*
+Per le sue caratteristiche architetturali, \`e possibile classificare il sistema come un \emph{Cyber Physical Systems of Systems} (CPSoS), mentre il particolare dominio applicativo colloca il sistema nell'area \emph{safety-critical}.\\*
+La Tesi passa in rassegna lo stato dell'arte circa la valutazione della \emph{dependability} di un sistema e le tradizionali tecniche di posizionamento ferroviario. Segue poi una descrizione del sistema, del suo contesto operativo nominale e degli standard che lo regolamentano. Si descrive l'ambiente in cui il sistema verr\`a analizzato, e infine si discute l'analisi condotta.
