abstract in inglese aggiunto

--- a/thesis.tex
+++ b/thesis.tex
@@ -142,6 +142,7 @@ parts]{classicthesis}
 %\include{chapter02}
 %\include{chapter03}
 \include{Abstract}
+\include{AbstractEng}
 \tableofcontents
 \listoftables
 \listoffigures
