--- a/AbstractEng.tex
+++ b/AbstractEng.tex
@@ -5,7 +5,7 @@ In this Thesis, the results of a fault injection campaign performed against an a
 The target system bases its operation on the use of a set of sensors installed on board the train, whose measurements are processed by an algorithm known as Sensor Fusion Algorithm (SFA).\\*
 SFA works by integrating the measurements provided by a set of sensors, in order to reduce the measurement noise. SFA output is a more secure and reliable measure than the one that would be obtained considering the sensors individually. In this context, the measure intended to be provided through the use of SFA is the position of the train.\\*
 Due to its architectural elements, it is possible to classify the system as a Cyber Physical Systems of Systems (CPSoS), and the particular application domain classifies the system as safety critical.\\*
-The Thesis reviews the state-of-the-art regarding the evaluation of the dependability of a system and the traditional techniques of railway positioning.\\* It continues with a system description, its nominal operating context and the standards that regulate it.\\*
+The Thesis reviews the state-of-the-art concerning the evaluation of the dependability of a system and the traditional techniques of railway positioning.\\* It continues with a system description, its nominal operating context and the standards that regulate it.\\*
 The environment in which the system will be analyzed is described, and finally the results of the analysis conducted are discussed.\\*
 Through the activity of fault injection it was mainly observed that the system is able to tolerate faults with respect to the communication system towards the sensors, provided that at least one channel remains functional: the one towards the inertial measurement unit.\\*
 The system also seems able to identify, and correct, the messages received that have a high probability to contain wrong data.
