--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,7 @@
 \newcommand{\myUni}{\protect{
 	Universit\`a degli Studi di Firenze}\xspace}
 \newcommand{\myLocation}{Firenze\xspace}
+\newcommand{\myRel}{\textit{Relatore:}\xspace}
 \newcommand{\myTime}{Anno Accademico 2018-2019\xspace}
 \newcommand{\myVersion}{Version 0.1\xspace}
 %--------------------------------------------------------------
