--- a/titlePage.tex
+++ b/titlePage.tex
@@ -23,7 +23,7 @@
 	\bigskip
       \endgroup
       \spacedlowsmallcaps{\myName} \\ $\ $\\
-      \spacedlowsmallcaps{\myProf}
+      \myRel \spacedlowsmallcaps{\myProf}
       \vfill 
       \vfill
     
